--- a/j_project.css
+++ b/j_project.css
@@ -1,26 +1,41 @@
 body{
-    background-color: rgb(0, 0, 0);
+    
+   background-color: white;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    
+    
 }
 
-
-
-
-
+ header{
+    border: .25px solid black;
+ }
+ 
 .header-main{
-    width:100%;
-    padding: 0 60px;
-    background-color: aliceblue;
+    width: 100%;
+     
+    top: 0;
+    position: fixed;
+    
+    padding: 20px;
+    border-radius: 100px;
+    box-shadow: 5px 5px rgb(198, 199, 199);
+     
     display: flex;
     justify-content: space-between;
     position: flex;
-    top: 0;
+    top: 0px;
     z-index: 100;
 }
 
-
+ 
+ 
 
 .header-main nav {
     display: flex;    /* to make all the object near each other */
+    
 }
 
 
@@ -29,125 +44,203 @@ body{
     width: fit-content;
     align-self: center;
     cursor: pointer;
+    padding-bottom: 40px;
+    padding-right: 10px;
+    margin-left: 40px;
+    
 }
 
 .header-main .logo img{    /* to makit sizefiting the border */
-    height: 100%;
+    height: 200%;
+    width: 200%px;
+    border: 1 slid rgb(0, 0, 0);
+   
 }
 
 .header-main ul{
     height: 100%;
-    padding-left:40px ;
+    padding-left:20px ;
     list-style: none;
     display: flex;        /* to put them in the same line*/
-    align-self: center;
+    
+   
 }
 
 
 .header-main ul li{
  position: relative;   /*  make the dropdowen goes under the parent*/
+    
 }
 
-.header-main ul li ul li a{
+.header-main ul li ul li a{    /*to make the sentence in one line*/
     white-space: nowrap;
+    font-size: 1.25rem;
+     
+   
+    
 }
+ 
+
 
 .header-main ul li a {  /* navigation bar editing */
     display: block;
-    padding: 0 10px;
-    height: 100%;
+    padding: 0px 10px;
+    padding-left: 30px;
+    text-decoration: none;
+    height: 50%;
     line-height: 60px;
-    font-size: 1rem;
+    font-size: 2rem;
     font-family: 'Times New Roman', Times, serif;
     color: rgb(0, 0, 0);
-    background-color: aliceblue;
+    background-color: rgba(49, 125, 191, 0);
     text-transform: uppercase;
     cursor: pointer;
     transition: all ease-in-out 100ms;
+    
 }
 
 
 
 .header-main ul li a:hover{
-    background-color: aqua;
-    color: aliceblue;
+    
+    color: rgb(142, 30, 206);
+
+    
 }
 
 
  /* drop dowen styling*/
 
- .header-main ul li ul{
+ .header-main .drop{
     visibility: hidden;
     opacity: 0;
     display: none;
-    position: absolute;
-    left: -40px;
+    position: absolute; /* to make the drop not get extra space*/
+     
     transition: all ease-in-out 100ms;
+   
  }
 
-ul li:hover>ul{
+ul li:hover>.drop{
     visibility: visible;
+    border: none;
     opacity: 1;
     display: block;
+    z-index: 2;
+    
+   
+ 
 }
 
+.header-main ul li .subnav:hover{
+    color: rgb(225, 90, 27);
+    
+    
+}
+.header-main ul li .subnav{
+    text-transform:lowercase;
+     
+}
+/* test animation*/
+#bord_anim {
+    animation: .5s anim-lineUp ease-out;
+  }
+  @keyframes anim-lineUp {
+    0% {
+      opacity: 0;
+      transform: translateY(80%);
+    }
+    20% {
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;
+      transform: translateY(0%);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0%);
+    }
+  }
+ 
+
+  #bord_anim{
+    box-shadow: 5px 5px 10px grey;
+  }
+
+/* test animation*/
+
+.bord{
+    padding-right: 60px;
+    border-radius: 5px;
+    background-color: rgb(255, 255, 255);
+}
+
+ .bord li a{
+    text-align: left;
+    justify-items: left;
+    padding-right: 40px;
+    
+    
+ }
+   
+  
 
  /*// drop dowen styling*/
 
+/* background image*/
 
-.header-main .sm{
-    align-self: center;
-    display: flex;
-}
+.bk_img{
+    z-index: 1;
+    background-image: url("pichelp.avif");
 
-.header-main form{
-    height: 40px;
-    padding-right: 5px;
-    display: flex;
-    border: 1px solid rgb(111, 97, 97);
-    border-radius: 20px 100px 100px 20px;
-    width: fit-content;
-    align-self: center;
-}
-
-.header-main form input{
-    height: 100%;
-    width: 250px;
-    padding: 0 10px 0 20px;
-    border-radius: 20px 100px 100px 20px;
-    font-size: 1rem;
-    font-family: 'Times New Roman', Times, serif;
-    border-color: rgba(253, 4, 0, 0);
-    background-color: rgba(240, 248, 255, 0);
+    /* Add the blur effect */
+    filter: blur(5px);
+    -webkit-filter: blur(4px);
+  
+    /* Full height */
+    height: 150%;
+    margin-top:200px ;
     
+   
+  
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+ 
+.bk_img img{
+    visibility: hidden;
 }
 
 
-.header-main form input:focus{
-    border: 1 solid rgb(255, 255, 255);
-    border-radius: 20px 100px 100px 20px;
-    border-bottom: 20px;
-     
-     
-    
-}
-
-.header-main form button{
-    width: fit-content;
-    padding: 0 5px 0 10px;
-    background-color: rgba(0, 0, 0, 0);
+.btn_nav{
+    color: rgba(240, 248, 255, 0);
+    background-color: rgba(0, 0, 139, 0);
     border-color: rgba(240, 248, 255, 0);
-}
-
-.header-main form button img{
-    height: 24px;
-    padding-top: 15%;
     cursor: pointer;
     
 }
 
+.img_ms{
+    border: 1px solid black;
+    border-radius: 200px;
+    padding: 5px;
+    width: 30px;
+    height: 30px;
+}
 
-
+.img_ms:hover{
+    border-color: rgb(255, 111, 0);
+    background-color: rgb(230, 193, 157);
+}
+.btn_chng{               /*usless */
+    width: 5px;
+    color: rgb(174, 205, 50);
+     
+    
+}
 
 
 
